# 3d_graphich_gender

./: CMakeLists.txt  README.md
cmake/: FindGLAD.cmake  FindGLFW.cmake  FindIMGUI.cmake
example1/: CMakeLists.txt  example1.cpp
example2/: CMakeLists.txt  example2.cpp
